simtbx.log
*** Error compiling 'simtbx/nanoBragg/brunger_example/run_example.py'...
  File "simtbx/nanoBragg/brunger_example/run_example.py", line 16
    print "SPEEDING UP! "
                        ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "SPEEDING UP! ")?

*** Error compiling 'simtbx/nanoBragg/nanoBragg_gui_frames.py'...
  File "simtbx/nanoBragg/nanoBragg_gui_frames.py", line 259
    print 'TOTAL TIME = ', time.time() - self.start_timer
                        ^
SyntaxError: invalid syntax

*** Error compiling 'simtbx/nanoBragg/nanoBragg_gui_init.py'...
  File "simtbx/nanoBragg/nanoBragg_gui_init.py", line 152
    for i in self.input_list: print i
                                    ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(for i in self.input_list: print i)?

*** Error compiling 'simtbx/nanoBragg/nanoBragg_input.py'...
  File "simtbx/nanoBragg/nanoBragg_input.py", line 113
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'simtbx/nanoBragg/nanoBragg_threads.py'...
  File "simtbx/nanoBragg/nanoBragg_threads.py", line 77
    print 'DEBUG: GENERATING FCALC OF {}'.format(self.SIM.default_F)
                                        ^
SyntaxError: invalid syntax

*** Error compiling 'simtbx/nanoBragg/tst_gaussian_mosaicity.py'...
  File "simtbx/nanoBragg/tst_gaussian_mosaicity.py", line 55
    print "%27s"%(str(RLP.elems)),"Vector length:%8.6f"%(RLP.length()),
               ^
SyntaxError: invalid syntax

*** Error compiling 'simtbx/nanoBragg/tst_nanoBragg_basic.py'...
  File "simtbx/nanoBragg/tst_nanoBragg_basic.py", line 49
    print "GOTHERE seed=",SIM.seed
                        ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "GOTHERE seed=",SIM.seed)?

*** Error compiling 'simtbx/nanoBragg/tst_nanoBragg_minimal.py'...
  File "simtbx/nanoBragg/tst_nanoBragg_minimal.py", line 19
    print SIM.missets_deg
            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(SIM.missets_deg)?

*** Error compiling 'simtbx/nanoBragg/tst_nanoBragg_pilatus.py'...
  File "simtbx/nanoBragg/tst_nanoBragg_pilatus.py", line 78
    print "mosaic_seed=",SIM.mosaic_seed
                       ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t "mosaic_seed=",SIM.mosaic_seed)?

